# PRISMAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_README.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  ISSUES.md  README.md  mkdocs.yml  open_questions.txt  package-lock.json  pyproject.toml
.github/workflows/: code-quality.yml  deploy.yml  e2e-tests.yml  integration-tests.yml  pull-request-checks.yml  unit-tests.yml
deploy/: Dockerfile  docker-compose.yml
deploy/cloud/aws/: ecs-taskdef.json
deploy/cloud/azure/: containerapp.bicep
deploy/cloud/gcp/: cloudrun.yaml
deploy/github/workflows/: ci.yml
dev_tooling/: parameter_audit.py  test_scaffolding.py
docs/: architecture.md  architecture_current.md  ci_cd_process.md  directory_structure.text  error_handling.md  index.md  initial_directory_structure.txt  logging.md
docs/api/: engine.md  index.md  storage.md  tools.md
docs/api/storage/: async_storage.md  vector_storage.md
examples/: README.md  agent_with_vector_memory.py  logging_example.py  multi_agent_handshake.py  quickstart.py  spawn_agent_example.py  vector_storage_example.py  vector_store_example.py
frontend/: .gitignore  next.config.mjs  package.json  tailwind.config.ts
frontend/src/utils/supabase/: README.md  client.ts  server.ts
src/PRISMAgent/: AI_README.md  APP_AI_README.md  __init__.py
src/PRISMAgent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/PRISMAgent/config/: __init__.py  base.py  env.py  logging.py  logging_config.py  model.py  storage.py
src/PRISMAgent/engine/: __init__.py  factory.py  hooks.py  runner.py
src/PRISMAgent/storage/: __init__.py  base.py  chat_storage.py  document_store.py  documents.py  embedding.py  embeddings.py  file_backend.py  in_memory_chat_storage.py  memory_backend.py  pinecone_backend.py  redis_backend.py  redisvl_backend.py  vector_backend.py  vector_store.py
src/PRISMAgent/tools/: __init__.py  code_interpreter.py  factory.py  spawn.py  web_search.py
src/PRISMAgent/ui/: README.md  __init__.py
src/PRISMAgent/ui/api/: __init__.py  fastapi_app.py
src/PRISMAgent/ui/api/routers/: __init__.py  chat.py  tools.py
src/PRISMAgent/ui/streamlit_app/: README.md  main.py  style.css
src/PRISMAgent/util/: __init__.py  error_handling.py  exceptions.py  logging.py
src/PRISMAgent/util/logging/: __init__.py  constants.py  context.py  formatters.py  formatting.py  handlers.py  logger.py  models.py  setup.py
src/PRISMAgent/util/supabase/: README.md  server.ts
src/agents/: __init__.py
src/backend/api/: index.py
src/backend/services/: agent_service.py
src/middleware/auth/: jwt_auth.py
tests/: conftest.py
tests/integration/: test_agent_flow.py
tests/tools/: test_spawn.py
tests/unit/: test_chat_storage.py  test_factory.py  test_logging.py  test_memory_backend.py  test_redis_backend.py  test_redisvl_backend.py  test_registry.py  test_registry_protocol.py  test_tool_factory.py  test_tools.py  test_vector_backend.py
tests/unit/storage/: test_async_storage.py
tests/unit/tools/: test_spawn.py
tests/unit/util/: test_error_handling.py  test_exceptions.py
