[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PRISMAgent"
version = "0.1.0"
description = "An advanced multi-agent framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "PRISM Team"}]

dependencies = [
  "openai>=1.14.0",
  "openai-agents-python>=0.2.0",
  "pydantic>=2.6.2",
]

[project.optional-dependencies]
redis     = ["redis>=5.0.0"]
supabase  = ["supabase>=2.0.0"]
pinecone  = ["pinecone-client>=2.0.0"]
qdrant    = ["qdrant-client>=1.8.0"]
dev       = [
  "pytest>=8.0",
  "coverage[toml]>=7.4",
  "ruff>=0.3",
  "black>=24.2",
  "mypy>=1.9",
  "pre-commit>=3.6",
]

[tool.setuptools]
packages = [{include = "PRISMAgent", from = "src"}]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["PRISMAgent"]
branch = true
